Migrate Java converters to flat single-model documents